testsuite/tests/typecheck/should_fail/tcfail131.stderr

tcfail131.hs:7:9: error: [GHC-25897]
    • Couldn't match expected type ‘b’ with actual type ‘Integer’
      ‘b’ is a rigid type variable bound by
        the type signature for:
          g :: forall b. Num b => b -> b
        at tcfail131.hs:6:3-22
    • In the expression: f x x
      In an equation for ‘g’: g x = f x x
    • Relevant bindings include
        x :: b (bound at tcfail131.hs:7:5)
        g :: b -> b (bound at tcfail131.hs:7:3)
